@@ -34,7 +34,7 @@ ACE_BEGIN_VERSIONED_NAMESPACE_DECL
  *
  * This data structure is meant to be used within a method,
  * function, or scope.  The actual parameter given for the
- * <ACE_SAFELY_INCREMENTABLE_DECREMENTABLE> template parameter
+ * @c ACE_SAFELY_INCREMENTABLE_DECREMENTABLE template parameter
  * must provide at least operators ++ and --.
  */
 template <class ACE_SAFELY_INCREMENTABLE_DECREMENTABLE>
@@ -51,7 +51,7 @@ public:
   void dump (void) const;
 
 protected:
-  /// Reference to the <ACE_SAFELY_INCREMENTABLE_DECREMENTABLE> counter
+  /// Reference to the @c ACE_SAFELY_INCREMENTABLE_DECREMENTABLE counter
   /// we're incrementing/decrementing.
   ACE_SAFELY_INCREMENTABLE_DECREMENTABLE &counter_;
 };
@@ -64,14 +64,6 @@ ACE_END_VERSIONED_NAMESPACE_DECL
 
 #if defined (ACE_TEMPLATES_REQUIRE_SOURCE)
 #include "ace/Auto_IncDec_T.cpp"
-// On Win32 platforms, this code will be included as template source
-// code and will not be inlined. Therefore, we first turn off
-// ACE_INLINE, set it to be nothing, include the code, and then turn
-// ACE_INLINE back to its original setting. All this nonsense is
-// necessary, since the generic template code that needs to be
-// specialized cannot be inlined, else the compiler will ignore the
-// specialization code. Also, the specialization code *must* be
-// inlined or the compiler will ignore the specializations.
 #endif /* ACE_TEMPLATES_REQUIRE_SOURCE */
 
 #if defined (ACE_TEMPLATES_REQUIRE_PRAGMA)
